Refactor Java 19